--- a/style.css
+++ b/style.css
@@ -3,15 +3,57 @@ html, body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url(img/gratis-png-star-wars-desktop-stormtrooper-espacio.png);
-    -moz-background-size: 100%; /* Firefox 3.6+ */
-    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
-    -o-background-size: 100%; /* Opera 9.6+ */
-    background-size: 100%; /* Современные браузеры */
+    background-image: url(img/fon.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
     color: aliceblue;
     overflow-x: hidden;
 
     }
+    header{
+        width: 100%;
+        height: 300px;
+        background-image:url(img/ultra_wide_Star_Wars-23382.png!d);
+        z-index: 99;
+    }
+    
+
+    .container{
+        width: 1140px;
+        margin: 0 auto;
+       
+    }
+
+    ul,li{
+        display: inline;
+        margin-top: 300px;
+        margin-right: 5px;
+        left: 700px;
+    }
+    .menu a{
+        color: #ffffff;
+        padding: 12px 0;
+        font-size: 30px;
+    }
+    .menu li{
+        margin-right: 25px;
+    }
+    
+    .menu a:hover{
+            color: #c39312;
+    }
+    .nav{
+        display: flex;
+        align-items: center;
+        height: 100px;
+        margin-left: 350px;
+    }
+
     section{
         margin: 7px;
     }
@@ -35,7 +77,7 @@ html, body {
         height: 250px;   
     }
     .txt{
-        font-size: 15px;
+        font-size: 20px;
     }
     a, a:link {
     color: black;
